[package]
name = "pok3r"
version = "0.0.1"
repository = "https://github.com/rsinha/pok3r"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

################################# Dependencies ################################

[dependencies]
sha2 = "0.9"
criterion = { version = "0.4.0", features = [ "html_reports" ] }
ark-std = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-poly = { version = "0.4.0" }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [ "curve", "r1cs" ] }
ark-serialize = { version = "^0.4.0", default-features = true }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [ "r1cs", "crh", "merkle_tree" ] }
num-bigint = { version = "0.4.0", default-features = false }

rand = "*"
paste = { version = "1.0" }
crossbeam = { version = "0.8.2" }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.52.0", features = ["async-std", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux"] }
libp2p-quic = { version = "0.8.0-alpha", features = ["async-std"] }
clap = { version = "4.3.17", default_features = false, features = ["std", "derive"] }
serde = { version = "1", default_features = false, features = ["derive"] }
serde_json = { version = "*" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]

[profile.dev]
opt-level = 3

